# src/network/openapi/models/PageOrderResponseDTO.ts
@@ -1,0 +1,159 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { PageableObject } from './PageableObject';
+import {
+    PageableObjectFromJSON,
+    PageableObjectFromJSONTyped,
+    PageableObjectToJSON,
+} from './PageableObject';
+import type { OrderResponseDTO } from './OrderResponseDTO';
+import {
+    OrderResponseDTOFromJSON,
+    OrderResponseDTOFromJSONTyped,
+    OrderResponseDTOToJSON,
+} from './OrderResponseDTO';
+import type { SortObject } from './SortObject';
+import {
+    SortObjectFromJSON,
+    SortObjectFromJSONTyped,
+    SortObjectToJSON,
+} from './SortObject';
+
+/**
+ * 
+ * @export
+ * @interface PageOrderResponseDTO
+ */
+export interface PageOrderResponseDTO {
+    /**
+     * 
+     * @type {number}
+     * @memberof PageOrderResponseDTO
+     */
+    totalElements?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PageOrderResponseDTO
+     */
+    totalPages?: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PageOrderResponseDTO
+     */
+    first?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PageOrderResponseDTO
+     */
+    last?: boolean;
+    /**
+     * 
+     * @type {number}
+     * @memberof PageOrderResponseDTO
+     */
+    numberOfElements?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PageOrderResponseDTO
+     */
+    size?: number;
+    /**
+     * 
+     * @type {Array<OrderResponseDTO>}
+     * @memberof PageOrderResponseDTO
+     */
+    content?: Array<OrderResponseDTO>;
+    /**
+     * 
+     * @type {number}
+     * @memberof PageOrderResponseDTO
+     */
+    number?: number;
+    /**
+     * 
+     * @type {Array<SortObject>}
+     * @memberof PageOrderResponseDTO
+     */
+    sort?: SortObject;
+    /**
+     * 
+     * @type {PageableObject}
+     * @memberof PageOrderResponseDTO
+     */
+    pageable?: PageableObject;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PageOrderResponseDTO
+     */
+    empty?: boolean;
+}
+
+/**
+ * Check if a given object implements the PageOrderResponseDTO interface.
+ */
+export function instanceOfPageOrderResponseDTO(value: object): value is PageOrderResponseDTO {
+    return true;
+}
+
+export function PageOrderResponseDTOFromJSON(json: any): PageOrderResponseDTO {
+    return PageOrderResponseDTOFromJSONTyped(json, false);
+}
+
+export function PageOrderResponseDTOFromJSONTyped(json: any, ignoreDiscriminator: boolean): PageOrderResponseDTO {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'totalElements': json['totalElements'] == null ? undefined : json['totalElements'],
+        'totalPages': json['totalPages'] == null ? undefined : json['totalPages'],
+        'first': json['first'] == null ? undefined : json['first'],
+        'last': json['last'] == null ? undefined : json['last'],
+        'numberOfElements': json['numberOfElements'] == null ? undefined : json['numberOfElements'],
+        'size': json['size'] == null ? undefined : json['size'],
+        'content': json['content'] == null ? undefined : ((json['content'] as Array<any>).map(OrderResponseDTOFromJSON)),
+        'number': json['number'] == null ? undefined : json['number'],
+        'sort': json['sort'] == null ? undefined : SortObjectFromJSON(json['sort']),
+        'pageable': json['pageable'] == null ? undefined : PageableObjectFromJSON(json['pageable']),
+        'empty': json['empty'] == null ? undefined : json['empty'],
+    };
+}
+
+export function PageOrderResponseDTOToJSON(value?: PageOrderResponseDTO | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'totalElements': value['totalElements'],
+        'totalPages': value['totalPages'],
+        'first': value['first'],
+        'last': value['last'],
+        'numberOfElements': value['numberOfElements'],
+        'size': value['size'],
+        'content': value['content'] == null ? undefined : ((value['content'] as Array<any>).map(OrderResponseDTOToJSON)),
+        'number': value['number'],
+        'sort': value['sort'] == null ? undefined : SortObjectToJSON(value['sort']),
+        'pageable': PageableObjectToJSON(value['pageable']),
+        'empty': value['empty'],
+    };
+}
+
